--- a/JS2/EXAMPLES/index.html
+++ b/JS2/EXAMPLES/index.html
@@ -3,7 +3,7 @@
        <script>
         let msg ="sunil"
         let eid = 101
-        let names = [ "SUNIL","SHANBOR"]
+        let names = [ "SUNIL","SHANBOR ,rajesh"]
         let emp ={
             id :101,
             name:"sunil"
